<resources>
    <string name="app_name">SiFi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 닉네임 프라그먼트 -->
    <string name="nickname_fragment_title">이름을 만들어볼까요?</string>
    <string name="nickname_fragment_edittext">이름을 입력해주세요.</string>
    <string name="nickname_fragment_content">최대 8자</string>
    <!-- 지역 설정 프라그먼트 -->
    <string name="activityRegion_fragment_title">주로 활동하는 지역은 어디인가요?</string>
    <string name="activityRegion_fragment_description">선택하신 지역의 친구들을 만날 수 있어요.</string>
    <string name="activityRegion_fragment_city">시흥시</string>
    <string name="activityRegion_fragment_region1">대야동</string>
    <string name="activityRegion_fragment_region2">신천동</string>
    <string name="activityRegion_fragment_region3">신현동</string>
    <string name="activityRegion_fragment_region4">은행동</string>
    <string name="activityRegion_fragment_region5">매화동</string>
    <string name="activityRegion_fragment_region6">목감동</string>
    <string name="activityRegion_fragment_region7">군자동</string>
    <string name="activityRegion_fragment_region8">월곶동</string>
    <string name="activityRegion_fragment_region9">정왕본동</string>
    <string name="activityRegion_fragment_region10">정왕1동</string>
    <string name="activityRegion_fragment_region11">정왕2동</string>
    <string name="activityRegion_fragment_region12">정왕3동</string>
    <string name="activityRegion_fragment_region13">정왕4동</string>
    <string name="activityRegion_fragment_region14">배곧1동</string>
    <string name="activityRegion_fragment_region15">배곧2동</string>
    <string name="activityRegion_fragment_region16">과림동</string>
    <string name="activityRegion_fragment_region17">연성동</string>
    <string name="activityRegion_fragment_region18">장곡동</string>
    <string name="activityRegion_fragment_region19">능곡동</string>

    <!-- 취미 프라그먼트 -->
    <string name="login_hobby"> 회원님의 요즘 취미는 무엇인가요?</string>
    <string name="login_hobby_multichoice">여러개를 선택할 수 있어요.</string>
    <string name="movie">영화</string>
    <string name="netflix">넷플릭스</string>
    <string name="showping">쇼핑</string>
    <string name="party">하우스 파티</string>
    <string name="interior">인테리어</string>
    <string name="health">헬스</string>
    <string name="study">카공</string>
    <string name="show">전시회</string>
    <string name="baking">베이킹</string>
    <string name="golf">골프</string>
    <string name="composer">작곡</string>
    <string name="yoga">요가</string>
    <string name="archer">양궁</string>
    <string name="hiking">등산</string>
    <string name="pcbang">pc방</string>
    <string name="sing">노래</string>
    <string name="cartoon">만화책</string>
    <string name="camping">캠핑</string>
    <string name="drive">드라이브</string>
    <string name="game">게임</string>
    <string name="band">밴드</string>
    <string name="dance">댄스</string>
    <string name="sul">음주</string>
    <string name="next">다음</string>

    <!-- 프로필 추가 설정 액티비티 -->
    <string name="activity_profile_setting_next_button">다음</string>

    <!-- 채팅 프레그먼트   -->
    <string name="chatinglist">메시지 목록</string>
    <string name="addChatingRoom">방 만들기</string>
    <string name="takeMessage">메시지를 입력하세요</string>

    <!-- 마이페이지 프래그먼트 -->
    <string name="myIntroduce">소개</string>
    <string name="myJob">직업</string>
    <string name="myMbti">MBTI</string>
    <string name="myRegion">지역</string>
    <string name="mySex">성별</string>
    <string name="siheung">경기도 시흥시 </string>


</resources>