<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_hobby"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hobby_multichoice"
        android:textColor="#858585"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/movie"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/netflix"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/showping"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/show"
                android:textColor="@drawable/selector_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/party"
                android:textColor="@drawable/selector_text" />


            <android.widget.Button
                android:id="@+id/hobby6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/interior"
                android:textColor="@drawable/selector_text" />


            <android.widget.Button
                android:id="@+id/hobby7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/health"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/study"
                android:textColor="@drawable/selector_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/baking"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/golf"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/composer"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/yoga"
                android:textColor="@drawable/selector_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/archer"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/hiking"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/pcbang"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/sing"
                android:textColor="@drawable/selector_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/cartoon"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/camping"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/drive"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/game"
                android:textColor="@drawable/selector_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/hobby21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/band"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/dance"
                android:textColor="@drawable/selector_text" />

            <android.widget.Button
                android:id="@+id/hobby23"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/sul"
                android:textColor="@drawable/selector_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>