<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NicknameFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname_fragment_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/nickNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_fragment_edittext" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname_fragment_content"
        android:textSize="10sp" />


</LinearLayout>