<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profileaddsetting.NicknameFragment"
    android:id="@+id/region_fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityRegion_fragment_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityRegion_fragment_description"
        android:textSize="10sp"
        android:layout_marginBottom="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activityRegion_fragment_city"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"/>
        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:descendantFocusability="blocksDescendants"
            android:theme = "@style/NumberPickerTheme" />



    </LinearLayout>





</LinearLayout>